Add integrating unique key notebook

--- a/notebooks/hss-data.ipynb
+++ b/notebooks/hss-data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "0bcc2c8d",
    "metadata": {},
    "outputs": [
@@ -10,9 +10,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2025-09-23 13:25:34.465\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36msams.config\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m15\u001b[0m - \u001b[1mPROJ_ROOT path is: C:\\Users\\Admin\\Documents\\GitHub\\sams\u001b[0m\n",
-      "\u001b[32m2025-09-23 13:25:34.524\u001b[0m | \u001b[33m\u001b[1mWARNING \u001b[0m | \u001b[36msams.config\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m83\u001b[0m - \u001b[33m\u001b[1mGoogle MAPS API key not found, using Nominatim geocoder\u001b[0m\n",
-      "\u001b[32m2025-09-23 13:25:34.524\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36msams.config\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m92\u001b[0m - \u001b[1mLoaded 0 geocodes from cache\u001b[0m\n"
+      "\u001b[32m2025-11-02 18:34:06.120\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36msams.config\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m15\u001b[0m - \u001b[1mPROJ_ROOT path is: C:\\Users\\Admin\\Documents\\GitHub\\sams\u001b[0m\n",
+      "\u001b[32m2025-11-02 18:34:06.201\u001b[0m | \u001b[33m\u001b[1mWARNING \u001b[0m | \u001b[36msams.config\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m83\u001b[0m - \u001b[33m\u001b[1mGoogle MAPS API key not found, using Nominatim geocoder\u001b[0m\n",
+      "\u001b[32m2025-11-02 18:34:06.222\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36msams.config\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m92\u001b[0m - \u001b[1mLoaded 0 geocodes from cache\u001b[0m\n"
      ]
     }
    ],
@@ -65,7 +65,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tables: ['students', 'institutes']\n"
+      "Tables: ['students', 'institutes', 'results']\n"
      ]
     }
    ],
@@ -99,13 +99,19 @@
     }
    ],
    "source": [
+    "# import sqlite3\n",
+    "\n",
     "# # Connect to the database\n",
     "# conn = sqlite3.connect(db_path)\n",
     "# cursor = conn.cursor()\n",
     "\n",
-    "# # Delete rows for ITI module except year 2017\n",
+    "# # Delete rows for DEG module for years 2019 and 2022\n",
     "# print(\"Deleting rows start\")\n",
-    "# cursor.execute(\"DELETE FROM students WHERE module = 'PDIS'\")\n",
+    "# cursor.execute(\"\"\"\n",
+    "#     DELETE FROM students \n",
+    "#     WHERE module = 'PDIS' \n",
+    "#     AND academic_year = 2020\n",
+    "# \"\"\")\n",
     "\n",
     "# # Commit and close\n",
     "# conn.commit()\n",
@@ -117,7 +123,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
+   "id": "138e71e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Summary of records in students table\n",
+      "     module  academic_year  total_records\n",
+      "0       DEG           2018         312817\n",
+      "1       DEG           2019         254341\n",
+      "2       DEG           2020         242661\n",
+      "3       DEG           2021         264132\n",
+      "4       DEG           2022         379911\n",
+      "5       DEG           2023         289848\n",
+      "6       DEG           2024         631505\n",
+      "7   Diploma           2018          64218\n",
+      "8   Diploma           2019          57824\n",
+      "9   Diploma           2020          56600\n",
+      "10  Diploma           2021          59278\n",
+      "11  Diploma           2022          78196\n",
+      "12  Diploma           2023          79700\n",
+      "13  Diploma           2024          81789\n",
+      "14      HSS           2018         439528\n",
+      "15      HSS           2019         411117\n",
+      "16      HSS           2020         431636\n",
+      "17      HSS           2021         498180\n",
+      "18      HSS           2022         530000\n",
+      "19      HSS           2023         560769\n",
+      "20      HSS           2024        1075864\n",
+      "21      ITI           2017          34654\n",
+      "22      ITI           2018          75211\n",
+      "23      ITI           2019          64148\n",
+      "24      ITI           2020          67415\n",
+      "25      ITI           2021          68000\n",
+      "26      ITI           2022          74104\n",
+      "27      ITI           2023          92085\n",
+      "28      ITI           2024          83958\n",
+      "29     PDIS           2020            916\n",
+      "30     PDIS           2021            874\n",
+      "31     PDIS           2022           1187\n",
+      "32     PDIS           2023           1287\n",
+      "33     PDIS           2024           1453\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Connect to DB\n",
+    "db_path = datasets[\"sams\"][\"path\"]   \n",
+    "conn = sqlite3.connect(db_path)\n",
+    "\n",
+    "query = \"\"\"\n",
+    "SELECT\n",
+    "    module,\n",
+    "    academic_year,\n",
+    "    COUNT(*) AS total_records\n",
+    "FROM students\n",
+    "GROUP BY module, academic_year\n",
+    "\"\"\"\n",
+    "\n",
+    "df_summary = pd.read_sql_query(query, conn)\n",
+    "conn.close()\n",
+    "\n",
+    "print(\"\\nSummary of records in students table\")\n",
+    "print(df_summary)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "a9de6a53",
    "metadata": {},
    "outputs": [
@@ -166,9 +243,6 @@
     }
    ],
    "source": [
-    "import sqlite3\n",
-    "import pandas as pd\n",
-    "\n",
     "# Connect to DB\n",
     "db_path = datasets[\"sams\"][\"path\"]   \n",
     "conn = sqlite3.connect(db_path)\n",
